# ProjetAP4A

./: .gitignore  CMakeLists.txt  README.md
include/: Badge.h  BadgeReader.h  Scheduler.h  Server.h
src/: App.cpp  App.h  Badge.cpp  Badge.h  BadgeReader.cpp  BadgeReader.h  Server.cpp  main.cpp
